<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--  titulo de activities de menu -->
    <string name="app_name">Interfaz Litotriptor</string>

    <!--  texto de menu -->
    <string name="visible">Hacer visible</string>
    <string name="cambiar">Encender Bluetooth</string>
    <string name="buscar">Conectar a dispositivo</string>
    <string name="configurar">Configuración de frecuencias</string>


    <!--  texto de TextView -->
    <string name="mensaje_1">Bionstrumentación III\nInterfaz del litotriptor</string>
    <string name="spinner">Estado del elemento: </string>
    <string name="novinculados">No se encontraron dispositivos vinculados</string>
    <string name="noencontrados">No se encontraron dispositivos</string>
    <string name="frecuenciap">Frecuencia portadora:  </string>
    <string name="frecuenciam">Frecuencia moduladora:  </string>
    <string name="progreso">0Hz</string>

    <!-- textos BT -->
    <string name="bt_DC">Estado de Conexión: \n Desconectado</string>
    <string name="bt_CT">Estado de Conexión: \n Conectado</string>
    <string name="bt_CTING">Estado de Conexión: \n Conectando</string>
    <string name="bt_read">Estado del elemento: \n Desconocida</string>
    <string name="bt_consola">Sin conexión</string>
    <string name="bt_elemento_on">Estado del elemento: \n Encendido</string>
    <string name="bt_elemento_off">Estado del elemento: \n Apagado</string>
    <string name="bt_sin_elemento">Estado del elemento: \n Seleccione elemento</string>

    <!-- texto de botones -->
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="buscar2">Buscar nuevos dispositivos</string>
    <string name="b_scanning">  Cancelar busqueda  </string>
    <string name="b_accionar">  Enviar  </string>
    <string name="b_parar">  Paro de emergencia  </string>


    <!-- textos DeviceList-->
    <string name="dialog_vinculados">Dispositivos Vinculados</string>
    <string name="dialog_encontados">Dispositivos Encontrados</string>
    <string name="title_activity_frecuencias">Frecuencias</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
