<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">
    <!--TITULO-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/titulo"
        android:visibility="visible"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_weight="1.3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/dialog_vinculados"
                style="@style/titulo"
                android:layout_weight="5"
                android:id="@+id/dispositivotext"            />
            <ProgressBar
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/bolita"
                android:visibility="gone"            />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="@color/azul" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:id="@+id/lista_encontrados"/>
    </LinearLayout>
    <!--TITULO-->

    <!--SUBTITULO-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/subtitulo">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/dialog_encontados"
            style="@style/mtexto"
            android:layout_weight="0.5"
            android:id="@+id/nuevos"            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:background="@color/azul" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lista_nuevos"/>
    </LinearLayout>
    <!--SUBTITULO-->
    <Button
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:layout_height="0dp"
        android:id="@+id/b_buscar"
        android:text="@string/buscar2"
        style="@style/boton"/>
</LinearLayout>